# st

./: .gitignore  CMakeLists.txt  README.md  auto.sh
compiler/: CMakeLists.txt
compiler/include/: parser.h  token.h
compiler/src/: compiler.c  main.c  parser.c  token.c
docs/: current.md
include/: bytebuffer.h  compiler.h  labellist.h  opcode.h  parser.h  runtime.h  token.h  util.h
shared/: CMakeLists.txt
shared/include/: opcode.h  registerid.h  util.h
shared/src/: bytebuffer.c  registerid.c  util.c
src/: compiler.c  labellist.c  main.c  parser.c  runtime.c  token.c  util.c
test/: basic_ops.stvm  begin.stvm  calls.stvm  div.stvm  div_zero.stvm  label.stvm  mult.stvm  print.stvm  register_operations.stvm  registers.stvm  start.stvm  sub.stvm  sub_negative.stvm
vm/: CMakeLists.txt
vm/include/: registers.h  runtime.h
vm/src/: main.c  registers.c  runtime.c
